styling(UserProfile): fix on smaller height

--- a/tmc-fsrs/assets/styles.css
+++ b/tmc-fsrs/assets/styles.css
@@ -627,6 +627,22 @@ a:hover {
   margin-top: 2rem;
 }
 
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mt-24 {
+  margin-top: 6rem;
+}
+
 .block {
   display: block;
 }
